# nanoVLM

./: .gitignore  AGENTS.md  README.md  cider.py  e2e_dual_tower.ipynb  evaluate.py  evaluate.sh  generate.py  generate.sh  generate_dual_tower.py  pyproject.toml  setup.sh  test_momh.py  torch_compile_optimization_report.md  train.py  train.sh  train_aokvqa.py  train_compile_debug.py  train_debug.py  train_dual_tower.py  train_dual_tower.sh  train_dualtower.py  train_twin_tower.py  train_utils.py  train_vanilla.py
.codex/: skills
.codex/skills/: registry.json
.codex/skills/flex-attention-inference/: SKILL.md
.codex/skills/mmstar-first-letter-scoring/: SKILL.md
.codex/skills/torch-compile-debug/: SKILL.md
.codex/skills/torch-compile-policy/: SKILL.md
benchmark/: benchmark_recompilation.py  token_sync_benchmark.py
configs/: config.py  config_debug.py  config_dual_tower.py  config_dualtower.py  config_twin_tower.py  config_vanilla.py
data/: advanced_datasets.py  aokvqa.py  coco_captions.py  coco_captions_split.py  collators.py  datasets.py  synthetic_dataset.py
evaluation/: cider_utils.py  coco_captions.py  ocr_vqa.py
lmms_eval/: wrapper.py
misc/: generate.py  generate_dual_tower.py  train_twin_tower.py
models/: __init__.py  config.py  dual_tower.py  language_model.py  momh_attention.py  twin_tower.py  vision_language_model.py  vision_transformer.py
models/dual_tower/: dual_language_model.py  dual_tower.py  lm_changes.patch
references/: experiment-log.md  troubleshooting.md
tests/: test_momh_attention.py  test_momh_correctness.py  test_momh_recompilation.py
train_utils/: dataloader.py  logging.py  mapper.py  utils.py
training_reports/: momh_flex_attention_retrospective.md
utils/: hf_uploader.py
