[project]
name = "nanovlm"
version = "0.1.0"
description = "The simplest repository for training/finetuning a small sized Vision-Language Model"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch>=2.9.0",
    "numpy==1.26.4",
    "torchvision>=0.22.1",
    "pillow>=11.0.0",
    "huggingface-hub>=0.26.0",
    "transformers>=4.46.0",
    "wandb>=0.18.0",
    "lmms-eval>=0.5.0",
]

[tool.uv]
override-dependencies = ["datasets==4.2.0"]

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm63"
url = "https://download.pytorch.org/whl/rocm6.3"
explicit = true
